compiler/test/conformance/testdata/errors/14_field_partial_init.yz
Bar: { f String }

main: {
    b : Bar()
    flag : true
    flag ? {
        b.f = "hello"
    }, {}
    print(b.f)
}
